# searchy

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  REFACTORING_PLAN.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-image.yml
app/: AGENTS.md  CLAUDE.md  __init__.py  config.py  main.py  models.py
app/services/: youtube.py
app/utils/: cache.py
tests/: conftest.py  test_age_restriction.py  test_api.py
